<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SA-MP App</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_infos">InfosActivity</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_players">PlayersActivity</string>
    <string name="hostname">Hostname</string>
    <string name="none">None</string>
    <string name="ip">IP</string>
    <string name="password">Password</string>
    <string name="players">Players</string>
    <string name="gamemode">Gamemode</string>
    <string name="mapname">Map name</string>
    <string name="error">Error</string>
    <string name="title_activity_credits">Credits</string>
    <string name="title_activity_about">About</string>
    <string name="developpedby">Developped by Rafael \'R@f\' Keramidas</string>
    <string name="version">Version 2.0.2</string>
    <string name="thanksto">Thanks to : StatusRed (Inspiration of his query class), Sasuke78200 (Help with query class), woothemes.com (In-app icons), TheOriginalTwig (App icon), Jantsu92 (Michael picture on this page).</string>

</resources>