<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfosActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/hostnameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hostname"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/hostnameData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/ipTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ip"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/ipData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/passwordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/passwordData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/playersTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/players"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/playersData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/gamemodeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gamemode"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/gamemodeData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/mapnameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mapname"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/mapnameData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/none"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/error"
        android:textSize="20sp"
        android:visibility="invisible" />

</RelativeLayout>